--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 base_url = "/"
 compile_sass = true
-title = "Docs title"
+title = "Enterprise Perception Systems"
 build_search_index = true
 
 taxonomies = [
